# Highlight-Generator-AI

./: .gitignore  README.md  Sample_Log.txt  pyproject.toml  requirements.txt  run_highlight.py
highlights_ai/: __init__.py  chunking.py  config.py  gemini_analysis.py  highlight_build.py  pipeline.py  run_highlight.py  timestamps.py
